2010-03-26  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* flickr/__init__.py, photoimagegtk.py: Improved the support for
	  large or original Flickr photos in fullscreen mode.

2010-03-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* base.py, flickr/__init__.py: Added support for large or original
	  Flickr photos in fullscreen mode.

2010-03-24  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* flickr/__init__.py, api.py: Added support for page argument on
	  Flickr API.  Added support original image url.

2010-03-22  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* plugins/: Added new conf for API reload interval.

2010-03-18  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoimageclutter.py: Fixed icon show/hide behaviors.

2010-03-17  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoliststore.py, preferences.py, gphotoframe.glade:
	  If the weight is 0 on photo source, the source should be ignored.
	* photoimageclutter.py: Code refactoring.
	* utils/nullobject.py: Initial import.

2010-03-15  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* fspot.py, photoimageclutter.py: Added support for F-Spot Rating.

2010-03-14  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoimageclutter.py: Added clutter UI support.
	  Added ActorFavIconNum for favoring on Flickr and Tumblr.

2010-03-04  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 0.6.2 release.
	* flickr/api.py: Fixed invalid Flickr NSID API URL (issue #47).

2010-03-02  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 0.6.1 release.
	* photoframe.py: Fixed a gconf default value error (issue #44).

2010-03-01  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 0.6 release.

2010-02-27  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* menu.py: Always show the image of menu items.
	* plugins/*: Added Icons to Plugins Treeview.

2010-02-26  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* fspot.py, picasa.py: Implemented plugin check functions.
	* plugins/*, preferences.py: Changed SOURCE_LIST elements from str